Suppress warnings and refactor